--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    body {
+        @apply box-border;
+        @apply font-sans;
+    }
+
+    *, *::before, *::after {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-size: inherit;
+        font-weight: inherit;
+    }
+
+    ol, ul {
+        list-style: none;
+    }
+
+    img {
+        max-width: 100%;
+        display: block;
+    }
+
+    button, input, select, textarea {
+        font: inherit;
+    }
+}
+
 @layer components {
     .input {
         @apply border-solid border-2 border-neutral-300 m-10 rounded-full px-4 py-1.5 bg-neutral-700 text-neutral-200 text-sm;
